
  * New upstream version:
    - debian/patches/70_allow_sound_above_100.patch,
      debian/patches/ubuntu-lightdm-user-switching.patch patches
      refreshed for new release. Removed ': function()' syntax as
      upstreamed removed them in those context.
    - debian/patches/ubuntu_panel_center_date_workarea.patch removed as
      upstreamed now.
  * debian/ubuntu-session-mods/ubuntu.css, debian/rules:
    - adapt to new GNOME Shell theme including OSK.
    - color shift keys in orange in OSK and use differente svg.
  * debian/rules:
    - some duplication removal.
  * debian/patches/27-nm-libexec-path.patch,
    debian/patches/71_smarter_alt_tab.patch,
    debian/patches/fix-wayland-vbox-crash.patch,
    debian/patches/optional-hot-corner.patch,
    debian/patches/ubuntu_block_mode_extension_update.patch,
    debian/patches/ubuntu_gdm.patch,
    debian/patches/ubuntu_lock_on_suspend.patch:
    - unfuzzed

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 02 Mar 2018 10:04:06 +0100

gnome-shell (3.26.2-0ubuntu3) bionic; urgency=medium

  * debian/patches/ubuntu_panel_center_date_workarea.patch:
    Align date entry relative to workarea. That way, title bars are
    centered relative to date entry. (LP: #1716432)
  * :
    Don't allow ubuntu mode extension to update
    Ensure that no update is proposed or loaded if sideloaded (always
    prefer system version) on the ubuntu session.
    We want to ensure that the default code running is going through
    our QA and security team process than being loaded from a 3rd
    party website.
    Also, that will enable us to upload newer versions on GNOME
    extension website while still letting older ubuntu release versions
    running expected extension version.
    Note that the patch set is simplified with a hardcoded extension list
    until https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/1 is merged.
    The patch set is too large otherwise to keep it maintainable as a distro
    patch.