@@ -33,8 +33,8 @@ Build-Depends: debhelper (>= 10.3~),
                libgnome-menu-3-dev,
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.21.6),
-               libibus-1.0-dev,
-               libmutter-1-dev (>= 3.26.0),
+               libibus-1.0-dev (>= 1.5.2),
+               libmutter-1-dev (>= 3.27.91),
                libnm-glib-dev (>= 0.9.8) [linux-any],
                libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
                libnm-gtk-dev (>= 0.9.8) [linux-any],
@@ -57,7 +57,8 @@ Build-Depends: debhelper (>= 10.3~),
                gir1.2-gweather-3.0 <!nocheck>,
                gir1.2-rsvg-2.0 <!nocheck>,
                xauth <!nocheck>,
-               xvfb <!nocheck>
+               xvfb <!nocheck>,
+               sassc,
 Standards-Version: 4.0.0
 Homepage: https://wiki.gnome.org/Projects/GnomeShell
 Vcs-Bzr: https://code.launchpad.net/~ubuntu-desktop/gnome-shell/ubuntu
@@ -83,7 +84,7 @@ Depends: ${gir:Depends},
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0,
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-1 (>= 3.26.0),
+         gir1.2-mutter-1 (>= 3.27.91),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-nmgtk-1.0 (>= 0.9.8) [linux-any],
          gir1.2-pango-1.0,
@@ -96,7 +97,7 @@ Depends: ${gir:Depends},
          gnome-shell-common (= ${source:Version}),
          ubuntu-wallpapers,
          gsettings-desktop-schemas (>= 3.21.3),
-         mutter (>= 3.26.1-2ubuntu2~),
+         mutter (>= 3.27.91),
          python3,
          libglib2.0-bin (>= 2.53.0),
 Recommends: xserver-xorg-legacy,
