@@ -7,6 +7,10 @@ gnome-shell (3.27.91-0ubuntu1) UNRELEASED; urgency=medium
       upstreamed removed them in those context.
     - debian/patches/ubuntu_panel_center_date_workarea.patch removed as
       upstreamed now.
+    - debian/control.in, debian/rules:
+      bump deps, add sassc which is now required.
+    - debian/rules:
+     use now with renamed build options.
   * debian/ubuntu-session-mods/ubuntu.css, debian/rules:
     - adapt to new GNOME Shell theme including OSK.
     - color shift keys in orange in OSK and use differente svg.
